[gd_scene load_steps=4 format=3 uid="uid://cd08w54xa3vom"]

[ext_resource type="Script" path="res://Backgrounds/shapes_background.gd" id="1_w478h"]

[sub_resource type="Gradient" id="Gradient_miwxp"]
offsets = PackedFloat32Array(0.212644, 0.913793)
colors = PackedColorArray(0.1365, 0.1365, 0.35, 1, 0.34, 0.1394, 0.17952, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_curf5"]
gradient = SubResource("Gradient_miwxp")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="ShapesBackground" type="CanvasLayer"]
layer = -1
script = ExtResource("1_w478h")
anim_type = 6
metadata/_edit_lock_ = true

[node name="SolidBG" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.796078, 0.839216, 0.843137, 1)
metadata/_edit_lock_ = true

[node name="GradientBG" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_curf5")
metadata/_edit_lock_ = true

[node name="TextureBG" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true
